# napari-ndev

./: .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  CITATION.cff  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  README.md  index.html  measure.log.txt  measure_props_cell-labels_cyto-labels_nuclei-labels.csv  mkdocs.yml  objects.inv  pyproject.toml  search.html  setup.cfg  sitemap.xml  testing.ipynb  tox.ini
.github/: TEST_FAIL_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.md  feature_request.md
.github/workflows/: deploy_docs.yml  make_release.yml  reusable_run_tox_test.yml  test_and_deploy.yml  test_comprehensive.yml  test_prereleases.yml
.napari-hub/: DESCRIPTION.md  config.yml
BINA_poster/: index.html
about/: index.html
api/helpers/: index.html
api/image_overview/: index.html
api/measure/: index.html
api/morphology/: index.html
api/nimage/: index.html
api/plate_mapper/: index.html
api/widgets/apoc_widget/: index.html
api/widgets/custom_apoc_feature_set/: custom_apoc_feature_set.md  index.html
api/widgets/image_utilities/: index.html
api/widgets/measure_widget/: index.html  measure_widget.md
api/widgets/napari_reader/: index.html
api/widgets/workflow_widget/: index.html  workflow_widget.md
beginner_setup/: index.html
docs/: BINA_poster.md  beginner_setup.md  index.md  installation.md  widget_further_info.md
docs/api/: helpers.md  image_overview.md  measure.md  morphology.md  nimage.md  plate_mapper.md
docs/api/helpers/: get_channel_names.md
docs/api/measure/: measure_regionprops.md
docs/api/widgets/: apoc_widget.md  custom_apoc_feature_set.md  image_utilities.md  measure_widget.md  napari_reader.md  workflow_widget.md
docs/examples/: .log.txt  skimage_workflow.ipynb
docs/examples/Labels/: cropped_neuron.ome  cropped_neuron.ome.tiff
docs/examples/images/: cropped_neuron.ome.tiff
docs/examples/images/Labels/: cropped_neuron.ome.tiff
docs/examples/measure/: measure_widget.ipynb
docs/examples/measure/data/: .log.txt  measure_props_Morphology.csv  measure_props_Morphology_grouped.csv
docs/examples/utilities/: annotations_and_cropping.ipynb
docs/examples/workflow/: workflow_napari-assistant.ipynb  workflow_scripting.ipynb  workflow_widget.ipynb
docs/scripts/: gen_ref_pages.py
docs/tutorial/: 00_setup.md  01_example_pipeline.md  02_basic_usage.md  02_easy_ML.md  03_build_pipeline.md
docs/tutorial/cellpainting/: measure.log.txt  measure_props_cell-labels_cyto-labels_nuclei-labels.csv  scripted_cellpainting_workflow.yaml  scripting_workflow.ipynb
docs/tutorial/primaryneurons/: tutorialclassifier.cl
docs/widget_reference/: annotation_saver.md  batch_predict.md  batch_training.md  batch_utilities.md  batch_workflow.md
examples/: pixel-class-viewer.cl  skimage_workflow.ipynb  workflow.yaml
examples/measure/labels/: 2024-08-07 25x 24HIC NCOA4 647 FT 568 PHALL 488 DAPI OBL_107_106_P1-H9.ome.tiff  2024-08-07 25x 24HIC NCOA4 647 FT 568 PHALL 488 DAPI OBL_56_55_P8-D9.ome.tiff  2024-08-07 25x 48HIC NCOA4 647 FT 568 PHALL 488 DAPI OBL_46_45_P6-D9.ome.tiff  2024-08-07 25x 72HIC NCOA4 647 FT 568 PHALL 488 DAPI OBL_110_109_P4-H9.ome.tiff  2024-08-07 25x 72HIC NCOA4 647 FT 568 PHALL 488 DAPI OBL_1_0_P8-B9.ome.tiff  2024-08-07 25x 72HIC NCOA4 647 FT 568 PHALL 488 DAPI OBL_62_61_P2-E9.ome.tiff  2024-08-07 25x 72HIC NCOA4 647 FT 568 PHALL 488 DAPI OBL_98_97_P9-G9.ome.tiff
examples/measure/measure_widget/: index.html  measure_widget.ipynb
examples/skimage_workflow/: index.html
examples/workflow/workflow_napari-assistant/: index.html
examples/workflow/workflow_scripting/: index.html  workflow_scripting.ipynb
examples/workflow/workflow_widget/: index.html
installation/: index.html
scripts/: gen_ref_pages.py
search/: search_index.json
src/napari_ndev/: __init__.py  __main__.py  _apoc_container.py  _apoc_feature_stack.py  _image_overview.py  _measure_container.py  _napari_reader.py  _napari_utilities.py  _plate_map_test.ipynb  _plate_mapper.py  _reader-old.py  _reader.py  _rescale_by.py  _settings.py  _utilities_container.py  _widget.py  _workflow_container.py  helpers.py  image_overview.py  image_overview_testing.ipynb  import_testing.ipynb  measure.py  morphology.py  napari.yaml  ndev_settings.yaml  nimage.py
src/napari_ndev/_tests/: conftest.py  test_apoc_container.py  test_apoc_feature_stack.py  test_helpers.py  test_image_overview.py  test_import.py  test_main.py  test_measure.py  test_measure_container.py  test_morphology.py  test_napari_reader.py  test_nimage.py  test_plate_mapper.py  test_rescale_by.py  test_settings.py  test_utilities_container.py  test_widget.py  test_workflow_container.py
src/napari_ndev/_tests/resources/: RGB.tif  (+3 more)
src/napari_ndev/widgets/: __init__.py  _apoc_container.py  _apoc_feature_stack.py  _main_container.py  _measure_container.py  _ndev_container.py  _nimage_scene_testing.ipynb  _nimage_scene_widget.py  _settings_container.py  _utilities_container.py  _workflow_container.py
tutorial/00_setup/: index.html
tutorial/01_example_pipeline/: index.html
tutorial/02_basic_usage/: index.html
tutorial/02_easy_ML/: index.html
tutorial/03_advanced_usage/: index.html
tutorial/03_build_pipeline/: index.html
tutorial/cellpainting/: measure_props_cell-labels_cyto-labels_nuclei-labels_grouped.csv
tutorial/cellpainting/ConcatenatedImages/: plate1_A14_site1_Ch1.tiff  plate1_B13_site1_Ch1.tiff  plate1_C12_site2_Ch1.tiff  plate1_D16_site2_Ch1.tiff  plate1_E18_site1_Ch1.tiff
tutorial/cellpainting/WorkflowOutput/: plate1_D16_site2_Ch1.tiff
tutorial/cellpainting/scripting_workflow/: index.html
tutorial/neuralprogenitors/Shapes/: E18.5 EdU16.5 9bp Homo Em3 S1_01 PAX6.tiff
tutorial/primaryneurons/Labels/: 2024-08-07 25x 48HIC NCOA4 647 FT 568 PHALL 488 DAPI OBL_scene_P5-D9.ome.tiff
widget_further_info/: index.html
widget_reference/annotation_saver/: index.html
widget_reference/batch_predict/: index.html
widget_reference/batch_training/: index.html
widget_reference/batch_utilities/: index.html
widget_reference/batch_workflow/: index.html
(+85 files in other folders)
