[metadata]
name = napari-ndev
url = https://github.com/TimMonko/napari-ndev
project_urls =
    Bug Tracker = https://github.com/TimMonko/napari-ndev/issues
    Documentation = https://timmonko.github.io/napari-ndev/
    Source Code = https://github.com/TimMonko/napari-ndev

description = A collection of widgets to process images from start to finish--focused on neural development.
long_description = file: README.md
long_description_content_type = text/markdown

author = Tim Monko
author_email = timmonko@gmail.com
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Framework :: napari
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering :: Image Processing
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Software Development :: User Interfaces
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities


[options]
packages = find:
install_requires =
    numpy >= 1.26, < 2.0 # for python 3.12 compatibility
    siphash24 >= 1.6 # to prevent fallback to python's hash function
    magicgui >= 0.8.3
    magic-class
    napari[all] >= 0.4.19 # for proper interaction with scaled images
    apoc
    pyclesperanto-prototype
    dask
    napari-workflows
    seaborn
    stackview
    bioio >= 1.1.0
    bioio-ome-tiff
    bioio-imageio
    bioio-ome-zarr
    tifffile >= 2023.3.15 # https://github.com/AllenCellModeling/aicsimageio/issues/523
    scikit-image >= 0.18.0 # for multi-channel regionprops support

python_requires = >=3.9
include_package_data = True
package_dir =
    =src
setup_requires = setuptools_scm
# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-ndev = napari_ndev:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5
    napari-segment-blobs-and-things-with-membranes
    napari-bioio @ git+https://github.com/TimMonko/napari-bioio.git@main#egg=napari-bioio

extras =
    bioio-nd2
    napari-pyclesperanto-assistant
    napari-segment-blobs-and-things-with-membranes
    napari-simpleitk-image-processing

gpl_extras =
    bioio-czi >= 1.0.1
    bioio-lif
    napari-bioio @ git+https://github.com/TimMonko/napari-bioio.git@main#egg=napari-bioio

docs =
    mkdocs
    mkdocs-autorefs
    mkdocs-material
    mkdocstrings
    mkdocstrings-python
    mkdocs-jupyter
    mkdocs-spellcheck[all]
    mkdocs-literate-nav
    black

dev =
    ruff
    pre-commit

all =
    napari-ndev[extras]
    napari-ndev[gpl_extras]

dev-all =
    napari-ndev[testing]
    napari-ndev[docs]
    napari-ndev[dev]

[options.package_data]
* = *.yaml

[options.exclude_package_data]
* =
    docs/*
    _tests/*
