[metadata]
name = napari-ndev
url = https://github.com/TimMonko/napari-ndev
project_urls =
    Bug Tracker = https://github.com/TimMonko/napari-ndev/issues
    Documentation = https://timmonko.github.io/napari-ndev/
    Source Code = https://github.com/TimMonko/napari-ndev

description = A collection of widgets to process images from start to finish--focused on neural development.
long_description = file: README.md
long_description_content_type = text/markdown

author = Tim Monko
author_email = timmonko@gmail.com
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Framework :: napari
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering :: Image Processing
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Software Development :: User Interfaces
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities


[options]
packages = find:
install_requires =
    numpy >= 1.26, < 2.0 # for python 3.12 compatibility
    siphash24 >= 1.6 # to prevent fallback to python's hash function
    magicgui >= 0.8.3
    magic-class
    napari[all] >= 0.4.19 # for proper interaction with scaled images
    apoc
    pyclesperanto-prototype
    pyclesperanto # added isntead of in extras
    dask
    napari-workflows
    napari-pyclesperanto-assistant
    napari-segment-blobs-and-things-with-membranes
    natsort
    seaborn
    stackview
    tifffile >= 2023.3.15 # https://github.com/AllenCellModeling/aicsimageio/issues/523 maybe keep for legacy reasons?
    scikit-image >= 0.18.0 # 0.18.0 for multi-channel regionprops support
    # bioio BSD3 dependencies
    ngff-zarr < 0.10.0 # 0.10.0 changes zarr_metadata module to v04.zarr_metadata module, breaking bioio.ome_tiff_writer
    bioio >= 1.1.0
    bioio-ome-tiff >= 1
    bioio-tifffile >= 1
    bioio-imageio >= 1
    bioio-ome-zarr >= 1
    bioio-nd2 >= 1


python_requires = >=3.9
include_package_data = True
package_dir =
    =src
setup_requires = setuptools_scm
# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-ndev = napari_ndev:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5
    bioio-czi >= 1.0.1
    napari_ndev[extras]

extras =
    # napari-pyclesperanto-assistant
    # napari-segment-blobs-and-things-with-membranes
    napari-simpleitk-image-processing

gpl_extras =
    # bioio GPL3 dependencies
    bioio-czi >= 1.0.1
    bioio-lif >= 1

docs =
    mkdocs
    mkdocs-autorefs
    mkdocs-material
    mkdocstrings
    mkdocstrings-python
    mkdocs-jupyter
    mkdocs-pdf
    mkdocs-spellcheck[all]
    mkdocs-literate-nav
    mkdocs-table-reader-plugin
    black

dev =
    ruff
    pre-commit

all =
    napari-ndev[extras]
    napari-ndev[gpl_extras]

dev-all =
    napari-ndev[testing]
    napari-ndev[docs]
    napari-ndev[dev]

[options.package_data]
* = *.yaml

[options.exclude_package_data]
* =
    docs/*
    _tests/*
